Amend media query from 1700px to 1747px for larger screens due to jumping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -755,7 +755,7 @@ footer a {
 }
 
 
-@media screen and (min-width: 1700px) {
+@media screen and (min-width: 1747px) {
     .gallery-item {
         width: 33vw;
         flex-basis: 550px;
